--- a/package.json
+++ b/package.json
@@ -10,7 +10,11 @@
   "author": "Matheus Santos Araújo da Silva <souzamatheus8174@gmail.com> (https://your-url.com/)",
   "license": "MIT",
   "devDependencies": {
+    "@types/express": "^4.17.13",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.5.4"
+  },
+  "dependencies": {
+    "express": "^4.17.2"
   }
 }
