--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "@types/bcrypt": "^5.0.0",
     "@types/express": "^4.17.13",
+    "@types/morgan": "^1.9.3",
     "ts-node-dev": "^1.1.8",
     "typescript": "^4.5.4"
   },
@@ -19,6 +20,7 @@
     "bcrypt": "^5.0.1",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
-    "mongoose": "^6.1.3"
+    "mongoose": "^6.1.3",
+    "morgan": "^1.10.0"
   }
 }
