--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "start:dev": "tsnd --inspect --transpile-only --ignore-watch node_modules src/server"
+    "start:dev": "tsnd --inspect --clear --transpile-only --ignore-watch node_modules src/server"
   },
   "keywords": [],
   "author": "Matheus Santos Araújo da Silva <souzamatheus8174@gmail.com> (https://your-url.com/)",
@@ -22,6 +22,7 @@
     "cookie-parser": "^1.4.6",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
+    "express-async-errors": "^3.1.1",
     "mongoose": "^6.1.3",
     "morgan": "^1.10.0"
   }
