--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
     "express-async-errors": "^3.1.1",
+    "express-validator": "^6.14.0",
     "mongoose": "^6.1.3",
     "morgan": "^1.10.0"
   }
